# vectoramp-rust

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.config/: nextest.toml
.github/workflows/: ci.yml  publish.yml
src/: client.rs  datasets.rs  errors.rs  ingestion.rs  intelligence.rs  lib.rs  schedules.rs  secrets.rs  sources.rs  transport.rs  types.rs
tests/: integration.rs
